# log-scale-chronology

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: events-short.toml  events.toml  stratigraphy-tira.toml  stratigraphy.toml
assets/paleotemps/: epica-antarctica-2009.csv  friedrich-2012-hansen-2013.csv  lisiecki-and-raymo-2005-hansen-2013.csv  markott-2013.csv  national-centers-for-environmental-information-2024.csv  ngrip-greenland-johnsen-1989.csv  pages2kconsortium-neukom2019-temp-cowtan-way.csv  pages2kconsortium-neukom2019-temp.csv  zachos-2008-hansen-2013.csv
assets/profiles/: evolution.toml  full.toml  small.toml  temps.toml  tira-living.toml  tira.toml  ubuntu.toml
assets/taxa/: acacia.csv  (+389 more)
assets/taxa-biblaridion-living/: ankistrobrachidae.csv  anostraca.csv  aphyllophyta.csv  apodomorpha.csv  aratrodontidae.csv  archaecoleostraca.csv  archeacrocheiridae.csv  archeanthostoma.csv  archeastrolophidae.csv  archechromatophytacea.csv  archecryptonychidae.csv  archeglyphonychidae.csv  archeisognatha.csv  archekentrodontidae.csv  archelaphrodontia.csv  archelastospondylidae.csv  archepeloropsidae.csv  archeremipterida.csv  archerhamphodontinae.csv  archezygophytacea.csv  archonychidae.csv  astrapophora.csv  barognatha.csv  coelophyta.csv  cyanodermata.csv  deinoglossidae.csv  dictyorhynchidae.csv  echinostoma.csv  eucaulophytoideae.csv  eucryptophyta.csv  euctenognatha.csv  eudolichostracidae.csv  eudryptognatha.csv  euhylotheriinae.csv  eulatoptera.csv  eulithostraca.csv  euplacostracinae.csv  euplatyptera.csv  euprocaecoformidae.csv  hadronychidae.csv  (+22 more)
(+181 files in other folders)
